k8s/1-volumen.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sonar
