k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-app
  template:
    metadata:
      labels:
        app: hello-app
    spec:
      containers:        
        - name: hello-app
          image: dionicio1/hello-app
          ports:
            - containerPort: 8080  
          imagePullPolicy: Always
          securityContext:
            runAsNonRoot: true
            runAsUser: 10000
            runAsGroup: 10000
---
apiVersion: v1
kind: Service
metadata:
  name: hello-app-svc
spec:
  selector:
    app: hello-app
  ports:
    - port: 80
      targetPort: 8080
#  type: LoadBalancer
